# ft_ls

./: .clang_complete  .gitignore  CMakeLists.txt  Makefile  README.md  analytics  debug  ft_ls  index.html  no_buffer.diff
.github/workflows/: codeql-analysis.yml  macos.yml
include/: ft_ls.h  ft_ls_structs.h
libft/: CMakeLists.txt  Makefile
libft/include/: ft_printf.h  structs.h
libft/src/io/: ft_putchar.c
libft/src/io/ft_printf/: flags.c  ft_printf.c  tools.c  tools_width.c  type_d.c  type_f.c  type_o.c  type_p.c  type_s.c  type_u.c  type_x.c
libft/src/lst/: lst.mk
libft/src/mem/: mem.mk
libft/src/str/: str.mk
src/: args_parser.c  free.c  ft_ls.c  lists.c  long_format.c  long_format_2.c  long_format_3.c  main.c  options.c  output.c  sorting.c  src.mk  utils.c
tests/: test.mk  test_main.c
